# tkach

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml  sonarqube.yml
examples/: anthropic_caching.rs  anthropic_caching_streaming.rs  basic.rs  custom_tool.rs  streaming.rs  streaming_cancel.rs  streaming_multi_tool.rs  streaming_openai_tools.rs  streaming_resilience.rs  streaming_subagent.rs
src/: agent.rs  error.rs  executor.rs  lib.rs  message.rs  provider.rs  stream.rs  tool.rs
src/providers/: anthropic.rs  mock.rs  mod.rs  openai_compatible.rs
src/providers/anthropic/: batch.rs  mod.rs
src/tools/: bash.rs  edit.rs  glob_tool.rs  grep.rs  mod.rs  read.rs  sub_agent.rs  web_fetch.rs  write.rs
tests/: agent_loop.rs  anthropic_batch.rs  integration.rs
