[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2024"
description = "A provider-independent agent runtime for Rust with built-in tools"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
glob = "0.3"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
