[package]
name = "agent-runtime"
version = "0.1.1"
edition = "2024"
rust-version = "1.86.0"
description = "A provider-independent agent runtime for Rust with built-in tools"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
glob = "0.3"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
eventsource-stream = "0.2"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
dotenvy = "0.15"

[lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"
