[package]
name = "fellowship-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.86.0"
description = "A provider-independent agent runtime for Rust with built-in tools"
license = "MIT"
repository = "https://github.com/kuchmenko/fellowship-rs"
documentation = "https://docs.rs/fellowship-rs"
readme = "README.md"
keywords = ["agent", "ai", "llm", "anthropic", "openai"]
categories = ["api-bindings", "asynchronous"]

# Crate name on crates.io is `fellowship-rs` (the bare `fellowship`
# name was already taken). The library import path stays clean —
# `use fellowship::Agent;` — via the explicit lib name below.
[lib]
name = "fellowship"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
glob = "0.3"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
eventsource-stream = "0.2"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
dotenvy = "0.15"

[lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"
